# CUDA_Kernels

./: README.md  utils.h
Day 1/: vector_addition.cu  vector_addition.py
Day 2/: experiments.ipynb  vector_addition.py
Day 3/: matrix_addition.cu
Day 4/: matrix_addition.ipynb  matrix_addition.py
Q&A/: 1.md  2.md  fundamentals.md
TK_kernels/: CMakeLists.txt  common.cuh  h100_bf16_gemm.cu  setup.md
TK_kernels/TK_GEMMs/: h100_bf16_gemm.cu
TK_kernels/TK_RMSNorm/: CMakeLists.txt  baselines.py  benchmark.py  harness.impl  setup.md  tk_rms.cu
TK_kernels/TK_layernorm/: CMakeLists.txt  baselines.py  benchmark.py  harness.impl  setup.md  tk_layernorm.cu  tk_layernorm.md
TK_layernorm/: tk_layernorm.cu
activations/: online_softmax.cu  relu.cu  smem_online_softmax.cu
convolutions/: 1d_conv.ipynb  1d_conv.md  2d_conv.ipynb  2d_conv.md
convolutions1D/: 1d_conv.cu  1d_conv.ipynb  1d_conv.md
convolutions2D/: 2d_conv.cu  2d_conv.ipynb  2d_conv.md  2d_conv_constant.cu  conv_2D_tiled.cu
dot_product/: dot_product.cu  dot_product.md
gemm/: sgemm_1d_regtiling.cu  tiled_sgemm.cu
gemv/: sgemv.cu  sgemv.ipynb
layer_norm/: layer_norm.cu  layer_norm.md
matrix_addition/: matrix_addition.cu  matrix_addition.py
matrix_multiplication/: naive_matmul.cu  naive_matmul.py  naive_sgemm.cu  tiled_matmul.cu
matrix_transpose/: tranpose_col2row.cu  tranpose_col2row.md  transpose_col2row.cu
reduction_kernels/: block_all_reduce_sum.cu  block_reduce.cu  block_reduce_sum.cu  reduction_kernels.md  warp_reduce_sum.cu  warp_reduce_sum.md
rms_norm/: rms_norm.cu  rms_norm.md
softmax/: online_softmax.cu  online_softmax.md  safe_softmax.cu  safe_softmax.md  softmax.cu  softmax.ipynb  softmax.md
vector_addition/: vector_addition.cu  vector_addition.py
